--- a/.github/workflows/check-styleguide.yml
+++ b/.github/workflows/check-styleguide.yml
@@ -51,6 +51,7 @@ jobs:
         if: steps.changed-markdown-files.outputs.any_changed == 'true'
         env:
           ALL_CHANGED_FILES: ${{ steps.changed-markdown-files.outputs.all_changed_files }}
+        continue-on-error: true
         run: |
           for file in ${ALL_CHANGED_FILES}; do
             echo "Running styleguide checker on $file"
@@ -66,3 +67,8 @@ jobs:
           reviewdog -efm="%f:%l:%c:%m" -name="style-check" -reporter=github-pr-review < style_issues.txt
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    
+    # Step 7: Final PR status
+      - name: Mark PR status
+        if: failure()  # Conditionally fail the job
+        run: echo "PR failed due to style issues."
