--- a/package.json
+++ b/package.json
@@ -9,5 +9,17 @@
   "dependencies": {
     "textlint": "^13.1.0",
     "textlint-rule-write-good": "^2.0.0"
+  },
+  "scripts": {
+    "release": "standard-version",
+    "release:minor": "standard-version --release-as minor",
+    "release:patch": "standard-version --release-as patch",
+    "release:major": "standard-version --release-as major"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "commitlint-plugin-function-rules": "^4.0.1",
+    "standard-version": "^9.5.0"
   }
 }
