--- a/.github/workflows/markdown-lint.yml
+++ b/.github/workflows/markdown-lint.yml
@@ -12,7 +12,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           reporter: github-pr-review
           filter_mode: file
-          markdownlint_flags: >-
-            --disable MD013 -- .
-            --disable MD033 -- .
-
+          markdownlint_flags: |
+            --disable MD013
+            --disable MD033
+            -- .
