--- a/.github/workflows/get_feedback_on_ai_reviewer.yml
+++ b/.github/workflows/get_feedback_on_ai_reviewer.yml
@@ -5,7 +5,7 @@ on:
     types: [edited]
 
 jobs:
-  detect-comment-edit:
+  get-feedback-on-ai-reviewer:
     if: github.event.comment.user.login == 'github-actions[bot]' && github.event.comment.user.login != github.event.sender.login
     runs-on: ubuntu-latest
 
@@ -18,7 +18,7 @@ jobs:
       with:
         python-version: '3.11'
 
-    - name: Checar se o comentário contém o feedback e detectar a resposta
+    - name: Check if the comment contains feedback on the AI reviewer and save the response
       id: check_comment
       env:
         PR_NUMBER: ${{ github.event.issue.number }}
@@ -27,5 +27,5 @@ jobs:
         COMMENT_URL: ${{ github.event.comment.html_url }}
       run: |
         pip install requests
-        python -m .github/scripts/get_feedback.py
+        python .github/scripts/get_feedback.py
       
