--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,5 +1,5 @@
 files:
   - source: /docs/localization/*.md
-    translation: /%original_path%/%original_file_name%.%file_extension%
+    translation: /%original_path%/%original_file_name%
   - source: /docs/localization/*.mdx
-    translation: /%original_path%/%original_file_name%.%file_extension%
+    translation: /%original_path%/%original_file_name%
