feat: add changelog action and conventional commits

--- a/package.json
+++ b/package.json
@@ -6,6 +6,19 @@
   "repository": "https://github.com/vtexdocs/dev-portal-content",
   "author": "Bruno Amui <bruno.amui@vtex.com.br>",
   "license": "MIT",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release": "standard-version",
+    "release:minor": "standard-version --release-as minor",
+    "release:patch": "standard-version --release-as patch",
+    "release:major": "standard-version --release-as major"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "commitlint-plugin-function-rules": "^4.0.1",
+    "standard-version": "^9.5.0"
+  },
   "dependencies": {
     "textlint": "^13.1.0",
     "textlint-rule-write-good": "^2.0.0"
