feat: force push changelog action

--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -40,4 +40,4 @@ jobs:
 
       - name: Push Changes
         run: |
-          git push --follow-tags origin main
+          git push --force --follow-tags origin main
